# pyrandomwiki

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflow/: tests.yml
.github/workflows/: release-drafter.yml
docs/: conf.py  index.rst  reference.rst
src/pyrandomwiki/: __init__.py  console.py  wikipedia.py
src/tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
