[tool.poetry]
name = "pyrandomwiki"
version = "0.1.0"
description = "Python Random Wiki"
authors = ["Jess Primero <jprimero.ayfvv@slmail.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jprimero/pyrandomwiki"
repository = "https://github.com/jprimero/pyrandomwiki"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
