[tool.poetry]
name = "pyrandomwiki"
version = "0.1.0"
description = "Python Random Wiki"
authors = ["Jess Primero <jprimero.ayfvv@slmail.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jprimero/pyrandomwiki"
repository = "https://github.com/jprimero/pyrandomwiki"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyrandomwiki = "pyrandomwiki.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyrandomwiki"]

[tool.coverage.report]
show_missing = true
fail_under = 100
